# sentimientos

./: .gitignore  README.md  conftest.py  main.py  pyproject.toml  requirements.txt
.github/workflow/: ci.yml
.github/workflows/: main.yml
almacenamiento/: guardar.py  leer.py
docs/: almacenamiento.md  api_referencia.md  arquitectura.md  fases.md  interfaz.md
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
memoriaFinal/: memoriaFinal.md
sentimiento/: analizador.py  cliente.py  interfaz.py  multitexto.py  niveles.py
tests/: test_almacenamiento.py  test_analizador.py
